.gitignore has been modified

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ ArabeToRomain/.settings
 ArabeToRomain/.classpath
 ArabeToRomain/.project
 
-## Classe_exo File
-### Projet Classe_exo1
-Classe_exo/Classe_exo1/.settings
-Classe_exo/Classe_exo1/.classpath
-Classe_exo/Classe_exo1/.project
+## Class_exo File
+### Projet Class_exo1
+Class_exo/Classe_exo1/.settings
+Class_exo/Classe_exo1/.classpath
+Class_exo/Classe_exo1/.project
